# KalmanNavigator

./: CMakeLists.txt
c/: cukf.cpp  cukf.h
ccs-c66x/: .cproject  cukf.c
include/: dynamics.h
python/ukf/: __init__.py
src/: dynamics.cpp
tuner/: CMakeLists.txt  tuner.cpp  tuner.h  tuner.py
